manifest/devops-presentation.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-presentation
  namespace: devops-presentation-ns
  labels:
    app.kubernetes.io/name: devops-presentation
    app.kubernetes.io/instance: devops-presentation-01
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/component: webApp
    app.kubernetes.io/part-of: nothing
    app.kubernetes.io/managed-by: CEDILLE
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: devops-presentation
      app.kubernetes.io/instance: devops-presentation-01
      app.kubernetes.io/version: "v1"
      app.kubernetes.io/component: webApp
      app.kubernetes.io/part-of: nothing
      app.kubernetes.io/managed-by: CEDILLE
  template:
    metadata:
      labels:
        app.kubernetes.io/name: devops-presentation
        app.kubernetes.io/instance: devops-presentation-01
        app.kubernetes.io/version: "v1"
        app.kubernetes.io/component: webApp
        app.kubernetes.io/part-of: nothing
        app.kubernetes.io/managed-by: CEDILLE
    spec:
      containers:
        - name: devops-presentation
          image: devops-presentation:latest
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
