manifest/devops-presentation-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-presentation-load-balancer
  namespace: devops-presentation-ns
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: devops-presentation
    app.kubernetes.io/instance: devops-presentation-01
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/component: webApp
    app.kubernetes.io/part-of: nothing
    app.kubernetes.io/managed-by: CEDILLE
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
