manifest/devops-presentation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-presentation-service
  namespace: devops-presentation-ns
  labels:
    app.kubernetes.io/name: devops-presentation-service
    app.kubernetes.io/instance: devops-presentation-service-01
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/component: service
    app.kubernetes.io/part-of: nothing
    app.kubernetes.io/managed-by: CEDILLE
spec:
  selector:
    app.kubernetes.io/name: devops-presentation
    app.kubernetes.io/instance: devops-presentation-01
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/component: webApp
    app.kubernetes.io/part-of: nothing
    app.kubernetes.io/managed-by: CEDILLE
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
