manifest/devops-presentation-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-presentation-ingress
  namespace: devops-presentation-ns
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  labels:
    app.kubernetes.io/name: devops-presentation-ingress
    app.kubernetes.io/instance: devops-presentation-ingress-01
    app.kubernetes.io/version: "v1"
    app.kubernetes.io/component: ingress
    app.kubernetes.io/part-of: nothing
    app.kubernetes.io/managed-by: CEDILLE
spec:
  ingressClassName: nginx
  rules:
  - host: devops-presentation.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: devops-presentation-load-balancer
            port:
              number: 8080
